# fuota-fragmentation-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_all.sh
.github/workflows/: cloud-ci.yml
bin-fragmenter/: Cargo.toml  README.md
bin-fragmenter/src/: fragments.rs  main.rs
flash-algo/: Cargo.toml
flash-algo-new/: Cargo.toml  rust-toolchain.toml
flash-algo-new/src/: bitcache.rs  fragmentation.rs  lib.rs  manager.rs  testutils.rs  update.rs
flash-algo-new/src/manager/: firmware.rs  fs.rs  layout.rs
flash-algo-new/src/tests/: more_real.rs
flash-algo-new/src/tests/snapshots/: flash_algo_new__tests__more_real__basics-2.snap  flash_algo_new__tests__more_real__basics.snap  flash_algo_new__tests__more_real__basics_blank_to_start_matrix.snap  flash_algo_new__tests__more_real__basics_done_matrix.snap
flash-algo-new/src/testutils/: heap_flash.rs  protocol_test_support.rs
flash-algo-new/src/update/: matrix.rs  naive.rs
flash-algo-new/src/update/snapshots/: flash_algo_new__update__naive__tests__basic_start.snap  flash_algo_new__update__naive__tests__start_write_all-2.snap
flash-algo-test/: Cargo.toml
flash-algo-test/src/: heap_flash.rs  lib.rs  protocol_test_support.rs
flash-algo-test/tests/: manager-tests.rs  more_real.rs  protocol-tests.rs
flash-algo-test/tests/snapshots/: interop__basics-2.snap  interop__basics.snap  interop__miss_any_one.snap  more_real__basics-2.snap  more_real__basics.snap
flash-algo/src/: bitcache.rs  fragmentation.rs  lib.rs  manager.rs  protocol.rs  ring.rs  spi_flash.rs  tests.rs
flash-algo/src/snapshots/: flash_algo__manager__test__partial_empty.snap  flash_algo__manager__test__start_write_all-2.snap  flash_algo__protocol__test__header_layout.snap
flash-algo/src/tests/: more_real.rs
flash-algo/src/testutils/: heap_flash.rs  protocol_test_support.rs
flash-algo/src/testutils/snapshots/: flash_algo__testutils__heap_flash__test__smoke.snap
original-flash-algo/: Cargo.toml
original-flash-algo/src/: fragmentation.rs  protocol.rs  spi_flash.rs  testutils.rs
original-flash-algo/src/snapshots/: flash_algo__manager__test__start_write_all.snap
parity-reconstruct/: Cargo.toml
parity-reconstruct/fuzz/: Cargo.toml
parity-reconstruct/fuzz/fuzz_targets/: random_decode.rs
parity-reconstruct/src/: flash.rs  lfdbt.rs  lib.rs
parity-robustness-check/: Cargo.toml  README.md
parity-robustness-check/src/: fragments.rs  main.rs  omissions.rs  test_data.rs  test_fuota.rs
