[package]
name = "bin-fragmenter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "James Munns <james@onevariable.com>",
    "Phil Markgraf <philip.markgraf@kel.vin>",
]
readme = "README.md"
description = "Application for fragmenting binaries in preparation for uploading using FUOTA messages."
repository = "https://github.com/Radiator-Labs/fuota-fragmentation-rs/tree/master/bin-fragmenter"
keywords = ["fuota", "lora"]
categories = [
    "Command line utilities",
    "Development tools",
    "Embedded development",
]

[features]
force-full-r = ["flash-algo/force-full-r"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "std"] }
crc = "3.2.1"
flash-algo = { path = "../flash-algo" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
