[package]
name = "flash-algo-test"
version = "0.1.0"
edition = "2021"
license = "Proprietary Kelvin"
authors = ["James Munns <james@onevariable.com>"]
readme = "README.md"
description = "Flash algorithm for the Cozy Motherboard 2023."
repository = "https://github.com/Radiator-Labs/cozyboard_2023/tree/master/shared-sw-fw/flash-algo-test"
keywords = [
    "kelvin",
    "kel.vin",
    "radiator-labs",
    "proprietary",
    "no-std",
    "embedded",
    "flash-memory",
]
categories = ["Embedded development", "No standard library"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
crc = "3.0.1"
flash-algo = { path = "../flash-algo" }

[dev-dependencies]
insta = "1.31.0"

[dev-dependencies.tokio]
version = "1.32.0"
features = ["macros", "test-util", "rt", "sync", "rt-multi-thread"]

[features]
# Enable a more robust forward error correction coverage approach.
#
# This MAY be incompatible with some other FEC implementations found in the wild.
force-full-r = []
