[package]
name = "original-flash-algo"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["James Munns <james@onevariable.com>"]
readme = "README.md"
description = "Flash algorithm for the Cozy Motherboard 2023."
repository = "https://github.com/Radiator-Labs/cozyboard_2023/tree/master/shared-sw-fw/original-flash-algo"
keywords = ["no-std", "embedded", "flash-memory"]
categories = ["Embedded development", "No standard library"]

[badges]
maintenance = { status = "deprecated" }

[features]
# Enable a more robust forward error correction coverage approach.
#
# This MAY be incompatible with some other FEC implementations found in the wild.
force-full-r = []
testutils = []
defmt = ["dep:defmt"]

# Enable standard library features. Typically used for testing/simulation.
use-std = []

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
crc = "3.2.1"
defmt = { version = "0.3.8", optional = true }

[dev-dependencies]
insta = "1.40.0"
tokio = { version = "1.41.0", features = [
    "macros",
    "test-util",
    "rt",
    "sync",
    "rt-multi-thread",
] }
