[package]
name = "parity-reconstruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
embedded-storage = { version = "0.3.1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
# Enable the flash adapters
flash = ["dep:embedded-storage"]
default = ["flash"]
serde = ["dep:serde"]
