[package]
name = "parity-reconstruct-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bitvec = {version = "1.0.1", default-features = false, features = ["atomic"]}

[dependencies.parity-reconstruct]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "random_decode"
path = "fuzz_targets/random_decode.rs"
test = false
doc = false
